--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   #- title: "Teaching"
   #  url: /teaching/    
     
-  - title: "Projects"
-    url: /portfolio/
+  #title: "Work Experience"
+  # url: /portfolio/
         
   #- title: "Blog Posts"
   #  url: /year-archive/
