--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Khondker Fariha Hossain"
   avatar           : "pp.png"
-  bio              : "PhD Student, <br> Department of Computer Science & Engineering, <br> University of Nevada, Reno"
+  bio              : "PhD Candidate, <br> Department of Computer Science & Engineering, <br> University of Nevada, Reno"
   location         : "Reno, NV"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=pey8DYgAAAAJ"
-  email            : "khondkerfarihah@nevada.unr.edu"
+  email            : "khondkerfarihah@unr.edu"
   researchgate     : #"https://www.researchgate.net/profile/Sharif_Amit"
   uri              :
   bitbucket        :
