--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Khondker Fariha Hossain"
-  avatar           : "pp.png"
+  avatar           : "pp1.png"
   bio              : "PhD Candidate, <br> Department of Computer Science & Engineering, <br> University of Nevada, Reno"
   location         : "Reno, NV"
   employer         :
